# advent-of-code

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Justfile  Makefile  Pipfile  README.md  advent-of-code.code-workspace  newday.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check-2023-rust.yaml  check-2023-rust.yml  pre-commit.yaml
01/: day1.ipynb
02/: day2.ipynb
03/: day3.ipynb
2015/day01/: README.md  main.py
2020/: pyproject.toml
2020/day01/: main.ipynb
2020/day02/: main.ipynb
2020/day03/: main.ipynb
2020/day04/: main.ipynb
2020/day05/: main.ipynb
2020/day06/: main.ipynb
2020/day07/: main.ipynb
2020/day08/: main.ipynb
2020/day09/: main.ipynb
2020/day10/: main.ipynb
2020/day11/: main.ipynb
2020/day12/: main.ipynb
2020/day13/: main.ipynb
2020/day14/: main.ipynb
2020/day15/: main.ipynb
2021/: README.md  pyproject.toml
2021/day01/: main.ipynb
2021/day02/: main.ipynb
2021/day03/: main.ipynb
2021/day04/: main.ipynb
2021/day05/: main.ipynb
2021/day06/: main.ipynb
2021/day07/: main.ipynb
2021/day08/: main.ipynb
2021/day09/: main.ipynb
2021/day10/: main.ipynb
2021/day11/: main.ipynb
2021/day12/: main.ipynb
2021/day13/: main.ipynb
2021/day14/: main.ipynb
2021/day15/: main.ipynb
2021/day16/: main.ipynb
2021/day20/: main.ipynb
2022/: pyproject.toml
2022/day01/: main.ipynb
2022/day02/: main.ipynb
2022/day03/: main.ipynb
2022/day04/: main.ipynb
2022/day05/: main.ipynb
2022/day06/: main.ipynb
2022/day07/: main.ipynb
2022/day08/: main.ipynb
2022/day09/: main.ipynb
2022/day10/: main.ipynb
2022/day11/: main.ipynb
2022/day12/: main.ipynb
2022/day13/: main.ipynb
2022/day14/: main.ipynb
2022/day18/: main.ipynb
2023/aoc2023/: Cargo.toml  Makefile  README.md
2023/aoc2023/day01/: Cargo.toml  README.md
2023/aoc2023/day01/src/: main.rs  part1.rs  part2.rs
2023/aoc2023/day02/: Cargo.toml  README.md
2023/aoc2023/day02/src/: main.rs  part1.rs  part2.rs  shared.rs
2023/aoc2023/day03/: Cargo.toml  README.md
2023/aoc2023/day03/src/: main.rs  part1.rs  part2.rs
2023/aoc2023/day04/: Cargo.toml  README.md
2023/aoc2023/day04/src/: main.rs  part1.rs  part2.rs  shared.rs
2023/aoc2023/day05/: Cargo.toml  README.md
2023/aoc2023/day05/src/: main.rs  part1.rs  part2.rs  shared.rs
2023/aoc2023/day06/: Cargo.toml  README.md
2023/aoc2023/day06/src/: main.rs  part1.rs  part2.rs
2023/aoc2023/day07/: Cargo.toml  README.md
2023/aoc2023/day07/src/: main.rs  part1.rs  part2.rs
2023/aoc2023/day08/: Cargo.toml  README.md
2023/aoc2023/day08/src/: part1.rs  part2.rs
2023/aoc2023/day09/: Cargo.toml  README.md
2023/aoc2023/day09/src/: part1.rs  part2.rs
2023/aoc2023/day10/: Cargo.toml  README.md  solution.py
2023/aoc2023/day10/src/: main.rs  part1.rs
2023/aoc2023/day11/: Cargo.toml  README.md
2023/aoc2023/day11/src/: funcs.rs  main.rs  part1.rs  part2.rs
2023/aoc2023/day12/: Cargo.toml  README.md
2023/aoc2023/day12/src/: part1.rs
2023/aoc2023/lube/: Cargo.toml  README.md
2023/aoc2023/lube/src/: katas.rs  lib.rs
2023/aoc2023/template/: README.md  cookiecutter.json
2023/aoc2023/template/{{cookiecutter.__daydir}}/: Cargo.toml  README.md
2023/aoc2023/template/{{cookiecutter.__daydir}}/src/: main.rs  part1.rs  part2.rs
2024/: 2024.just  Justfile  README.md
2024/python/: README.md  py.just  pyproject.toml  ruff.toml
2024/python/src/grice_py_aoc_2024/: cli.py  main.py-tpl
2024/python/src/grice_py_aoc_2024/day01/: main.py  test_day01.py
2024/python/src/grice_py_aoc_2024/day02/: main.py  test_day02.py
2024/python/src/grice_py_aoc_2024/day03/: main.py  test_day03.py
2024/python/src/grice_py_aoc_2024/day04/: main.py  test_day04.py
2024/python/src/grice_py_aoc_2024/day05/: README.md  main.py  test_day05.py
2024/python/src/grice_py_aoc_2024/day06/: main.py  test_day06.py
2024/python/src/grice_py_aoc_2024/day07/: main.py  test_day07.py
2024/python/src/grice_py_aoc_2024/day08/: main.py  test_day08.py
2024/python/src/grice_py_aoc_2024/day09/: main.py  test_day09.py
2024/python/src/grice_py_aoc_2024/day10/: main.py  test_day10.py
2024/python/src/grice_py_aoc_2024/day11/: main.py  test_day11.py
2024/python/src/grice_py_aoc_2024/day12/: main.py  test_day12.py
2024/python/src/grice_py_aoc_2024/day13/: test_day13.py
2024/python/src/grice_py_aoc_2024/day14/: main.py  test_day14.py
2024/python/src/grice_py_aoc_2024/day15/: main.py  test_day15.py
2024/python/src/grice_py_aoc_2024/day16/: test_day16.py
2024/python/src/grice_py_aoc_2024/day17/: main.py  test_day17.py
2024/python/src/grice_py_aoc_2024/day25/: main.py  test_day25.py
2024/python/src/grice_py_aoc_2024/templates/: main.py-tpl  test_day.py-tpl
2024/ruby/: day01.rb
2025/python/: README.md  day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  helper.py  pyproject.toml
adventofcode2020/day01/: main.ipynb
adventofcode2020/day03/: main.ipynb
adventofcode2020/day05/: main.ipynb
adventofcode2020/day06/: main.ipynb
adventofcode2020/day07/: main.ipynb
adventofcode2020/day08/: main.ipynb
adventofcode2020/day09/: main.ipynb
adventofcode2020/day11/: main.ipynb
adventofcode2020/day12/: main.ipynb
adventofcode2020/day13/: main.ipynb
scratchpad/: notes.ipynb  pyproject.toml  scratchpad.ipynb
~notes/: notes.md
