[tool.poetry]
name = "griceturrble-advent-of-code"
version = "0.1.0"
description = ""
authors = ["Galen Rice <griceturrble@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "newday.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.17.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
newday = "newday:main"
