[tool.poetry]
name = "griceturrble-advent-of-code-2021"
version = "0.1.0"
description = "GriceTurrble's Advent of Code solutions for 2021"
authors = ["Galen Rice <griceturrble@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
numpy = "^1.26.3"
pandas = "^2.1.4"
polars = "^0.20.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipykernel = "^6.28.0"
ipytest = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
