[tool.poetry]
name = "scratchpad"
version = "0.1.0"
description = "Scratchpad for random code"
authors = ["Galen Rice <griceturrble@protonmail.com>"]
readme = "README.md"
packages = [{include = "scratchpad", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
polars = "^1.6.0"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipytest = "^0.14.2"
pytest = "^8.3.2"
pytest-randomly = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
