[project]
name = "scratchpad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["polars>=1.17.1"]

[[project.authors]]
name = "Galen Rice"
email = "griceturrble@protonmail.com"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "scratchpad.hello:main"


[tool.pytest.ini_options]
addopts = "-ra -q"
