[workspace]
resolver = "2"
members = [
    "lube",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    # "day06",
    # "day07",
    # "day08",
    # "day09",
    # "day10",
    # "day11",
    # "day12",
    # "day13",
    # "day14",
    # "day15",
    # "day16",
    # "day17",
    # "day18",
    # "day19",
    # "day20",
    # "day21",
    # "day22",
    # "day23",
    # "day24",
    # "day25",
]

[workspace.dependencies]
clap = { version = "4.4.10", features = ["derive"] }
regex = "1.10.2"
substring = "1.4.5"
itertools = "0.12.0"
