[project]
name = "grice-py-aoc-2024"
version = "2024.12.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Galen Rice", email = "griceturrble@protonmail.com" }]
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.0", "polars>=1.16.0"]

[project.scripts]
day01 = "grice_py_aoc_2024.day01.main:main"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = """
--verbose
"""
