[project]
name = "grice-py-aoc-2024"
version = "2024.12.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.28.1",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
[[project.authors]]
name = "Galen Rice"
email = "griceturrble@protonmail.com"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cli = "grice_py_aoc_2024.cli:cli"
day01 = "grice_py_aoc_2024.day01.main:main"
day02 = "grice_py_aoc_2024.day02.main:main"
day03 = "grice_py_aoc_2024.day03.main:main"
day04 = "grice_py_aoc_2024.day04.main:main"
day05 = "grice_py_aoc_2024.day05.main:main"
day06 = "grice_py_aoc_2024.day06.main:main"
day07 = "grice_py_aoc_2024.day07.main:main"
day08 = "grice_py_aoc_2024.day08.main:main"
day09 = "grice_py_aoc_2024.day09.main:main"
day10 = "grice_py_aoc_2024.day10.main:main"
day11 = "grice_py_aoc_2024.day11.main:main"
day12 = "grice_py_aoc_2024.day12.main:main"
day13 = "grice_py_aoc_2024.day13.main:main"
day14 = "grice_py_aoc_2024.day14.main:main"
day15 = "grice_py_aoc_2024.day15.main:main"
day16 = "grice_py_aoc_2024.day16.main:main"
day17 = "grice_py_aoc_2024.day17.main:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
